--- a/templates/simple-eks-cluster.yaml
+++ b/templates/simple-eks-cluster.yaml
@@ -11,13 +11,11 @@ Resources:
   EKSCluster:
     Type: AWS::EKS::Cluster
     Properties:
-      Name: Prod
-      Version: "1.23"
       RoleArn: !Sub "arn:${AWS::Partition}:iam::${AWS::AccountId}:role/eks-quickstart-ControlPlane"
       ResourcesVpcConfig:
         SecurityGroupIds: !Ref SecurityGroupIds
         SubnetIds: !Ref SubnetIds
-        EndpointPublicAccess: false
+        EndpointPublicAccess: true
         EndpointPrivateAccess: true
       Logging:
         ClusterLogging:
